@@ -1,3 +1,5 @@
+20100213
+	apply saoret.one's changes for thumb [issue 155]
 20100205
 	update man pages to replace most references to Styx by 9P
 	update man pages to replace references to sys-dial(2) by dial(2)
